5th commit: minor fixes

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,7 +1,7 @@
 project:
   type: website
   resources:
-    - old_resume.pdf
+    - C.H. Resume 2025.pdf
     - Team_DW.pdf
     - Predicting Obesity Status.pdf
     - Analyzing Tire Degradation.pdf
